# stock-portfolio-manager

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/: ai-tools.md  skills.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  xueqiu-login.json
src-tauri/src/: lib.rs  menu.rs
src-tauri/src/commands/: ai.rs  backup.rs  categories.rs  chat_sessions.rs  dashboard.rs  excel_import.rs  exchange_rates.rs  holdings.rs  import_export.rs  mod.rs  ocr.rs  options.rs  performance.rs  quarterly.rs  quote_provider.rs  quotes.rs  reset.rs  skills.rs  snapshots.rs  statistics.rs  stock_splits.rs  transactions.rs
src-tauri/src/db/: mod.rs  tests.rs
src-tauri/src/models/: ai_config.rs  dashboard.rs  import_export.rs  mod.rs  option.rs  option_share_lot.rs  performance.rs  quarterly.rs  quote.rs  quote_provider.rs  skill.rs
src-tauri/src/services/: ai_chat_service.rs  ai_config_service.rs  ai_models_service.rs  ai_tools.rs  alert_service.rs  exchange_rate_service.rs  http_client.rs  import_export_service.rs  indicators.rs  market_overview_service.rs  mod.rs  performance_service.rs  quarterly_service.rs  quote_provider_service.rs  quote_service.rs  skill_service.rs  snapshot_service.rs
src-tauri/src/skills/: allocation-checkup.md  dividend-income.md  market-pulse.md  options-review.md  performance-diagnosis.md  portfolio-risk-analysis.md  quarterly-report.md  return-attribution.md  stock-deep-dive.md  trade-review.md
src/hooks/: useTheme.ts  useXueqiuLogin.ts
src/stores/: aiStore.ts  chatSessionStore.ts  chatStore.ts  optionShareLotStore.ts  optionStore.ts  quarterlyStore.ts  quoteStore.ts  settingsStore.ts  skillStore.ts
src/styles/: global.css  (+1 more)
tools/normalize_hk_symbols/: Cargo.toml  README.md
tools/normalize_hk_symbols/src/: main.rs
(+47 files in other folders)
