[package]
name = "stock-portfolio-manager"
version = "1.2.2"
description = "Stock Portfolio Manager"
authors = []
edition = "2021"

[[bin]]
name = "stock-portfolio-manager"
path = "src/main.rs"

[lib]
name = "stock_portfolio_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "gzip", "cookies"] }
url = "2"
csv = "1"
sys-locale = "0.3"
regex = "1.13.1"
base64 = "0.22.1"
urlencoding = "2.1.3"
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSMenu", "NSMenuItem"], default-features = false }
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSThread"], default-features = false }

[features]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
